[gd_scene load_steps=4 format=3 uid="uid://datqf7a1201rr"]

[ext_resource type="ArrayMesh" uid="uid://b41thtnttt0a4" path="res://Resources/3D/meshes/backsword.res" id="2_hnyhg"]
[ext_resource type="Script" path="res://Scripts/UI/item_slot.gd" id="2_mlm73"]

[sub_resource type="Environment" id="Environment_5nvhx"]
background_mode = 1
background_color = Color(1, 1, 1, 0)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[node name="ItemSlot" type="Panel"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_mlm73")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(40, 40)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, -0.397148, 0.917755, 0, 0.917755, 0.397148, -1, 1.73599e-08, -4.01163e-08, 6.565, 3.24, 0)
environment = SubResource("Environment_5nvhx")
fov = 30.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = ExtResource("2_hnyhg")

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "12"
horizontal_alignment = 2
vertical_alignment = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 1.0
offset_bottom = 63.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
